shmuel 21.01.2014 22:03:31 +0200 - build 273

1. LuaFAR (far.Message): добавлен флаг 'n', означающий "не делать свёртку длинных строк".

shmuel 18.01.2014 13:18:11 +0200 - build 272

1. M#2561: far.MacroPost: возможность задавать SequenceText функцией (а не строкой).
   Добавлена функция mf.postmacro.

shmuel 14.01.2014 11:15:34 +0200 - build 271

1. Адаптация к Far 3.0.3770 ("рефакторинг в системе макросов").

shmuel 12.01.2014 20:21:37 +0200 - build 270

1. LuaFAR (far.MacroAdd) - доработка build 150:
   -- Callback(Id,Flags) получает первым параметром не число, а light userdata.

shmuel 10.01.2014 16:45:19 +0200 - build 269

1. LuaFAR-плагины, собираемые GCC:
   автоматическое включение экспорта FreeFindDataW при наличии GetFindDataW.

shmuel 07.01.2014 11:00:53 +0200 - build 268

1. Кастомная сортировка: косметика.

shmuel 06.01.2014 17:09:29 +0200 - build 267

1. Кастомная сортировка: возможность указания функции сортировки при загрузке режима сортировки.

shmuel 06.01.2014 13:33:30 +0200 - build 266

1. Кастомная сортировка: адаптация "альтернативной" функции сортировки (qsort) к Far 3.0.3751+.

shmuel 05.01.2014 19:22:10 +0200 - build 265

1. Рефакторинг кастомной сортировки.

drkns 03.01.2014 13:38:35 +0200 - build 264

1. Немного упростим 263.

t-rex 03.01.2014 04:58:00 +0200 - build 263

1. Фикс кастомной сортировки, уродливо но чтоб намёк был понят.

[ Примечание от shmuel: кастомная сортировка сломалась в Far 3.0.3751 ]

shmuel 28.12.2013 13:05:44 +0200 - build 262

1. M#2550: Возвращаемое значение для загрузочных функций Macro и Event.
   При успешной загрузке данные функции возвращают число-идентификатор
   загруженного макроса или обработчика события.

shmuel 25.12.2013 18:55:20 +0200 - build 261

1. LuaFAR (far.Timer):
   после закрытия таймера его обработчик не может быть автоматически вызван,
   поэтому больше нет необходимости проверять в обработчике, закрыт ли таймер.

shmuel 16.11.2013 23:14:32 +0200 - build 260
