@@ -1,3 +1,9 @@
+shmuel 24.01.2014 20:19:11 +0200 - build 274
+
+1. LuaFAR: M#2572: far.MakeMenuItems: добавлять в таблицу не только строковое представление, но и сами объекты.
+
+2. LuaFAR: M#2573: far.Show: возвращать выбранный пункт меню.
+
 shmuel 21.01.2014 22:03:31 +0200 - build 273
 
 1. LuaFAR (far.Message): добавлен флаг 'n', означающий "не делать свёртку длинных строк".
